Fixed weird image stretching

--- a/src/About/About.scss
+++ b/src/About/About.scss
@@ -44,7 +44,7 @@
 .slideshow-content-container {
     display: flex;
     height: 100%;
-    justify-content: space-evenly;
+    justify-content: center;
     @media screen and (min-width: 1000px) {
         flex-direction: row;
     }
@@ -56,6 +56,7 @@
 .slideshow-lower-container {
     height: 100%;
     display: flex;
+    justify-content: space-between;
 }
 
 .slideshow-arrow, .slideshow-arrow {
